--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+haphazard = { git = "https://github.com/emilHof/haphazard" }
 
 [dev-dependencies]
 crossbeam-skiplist = "0.1"
