--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "skippy"
 version = "0.0.0-alpha.0"
 edition = "2021"
+authors = ["Emil Hofstetter <emil.k.hofstetter@gmail.com>"]
+repository = "https://github.com/emilhof/skippy"
+license-file  = "LICENSE.txt"
+keywords = ["skiplist", "lock-free", "mutli-threading", "concurrency"]
+description = "A set of lock free, thread safe, and fast data structures implemented via a Skip List"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
