Bumb version and fix some memory leaks

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -9,8 +9,10 @@ cargo-fuzz = true
 
 [dependencies]
 libfuzzer-sys = "0.4"
+afl = "*"
+rand = "*"
 
-[dependencies.skippy]
+[dependencies.skippy-rs]
 path = ".."
 
 # Prevent this from interfering with workspaces
