--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "skippy-rs"
-version = "0.0.0-alpha.0"
+version = "0.0.0-alpha.1"
 edition = "2021"
 authors = ["Emil Hofstetter <emil.k.hofstetter@gmail.com>"]
 repository = "https://github.com/emilhof/skippy"
@@ -10,6 +10,8 @@ description = "A set of lock free, thread safe, and fast data structures impleme
 
 [dependencies]
 rand = "0.8.5"
+# This version of `haphazard` has the `retire_with` method added.
+# haphazard = { git = "https://www.github.com/emilhof/haphazard", version = "0.1.5" }
 haphazard = "0.1"
 
 [dev-dependencies]
